pub-iag/base/iag_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: iag-pub-instance-service
spec:
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: iag-pub-instance
  type: LoadBalancer
